--- a/app/views/flights/_search_results.html.erb
+++ b/app/views/flights/_search_results.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "#", method: "get" do  %>
+<%= form_tag new_booking_path, method: "get" do  %>
   <h3>Results:</h3>
   <table>
     <thead>
